# Asura-Crow

./: .gitignore  README.md
.github/workflows/: c-cpp.yml  go.yml
api/: go.mod
crawler/: .dockerignore  Dockerfile  crawler.go  go.mod  go.sum  main.go
crawler/crawler/: crawler.go
crawler/data/: db.go
crawler/tests/: crawler_test.go  db_test.go
indexer/: CMakeLists.txt
indexer/api/: api.cpp
indexer/db/: db.cpp
indexer/include/db/: db.hpp  indexdb.hpp
indexer/include/indexer/: indexer.hpp
indexer/indexer/: indexer.cpp
indexer/lib/: libJetPlusPlusLib.dylib
search/: CMakeLists.txt  Dockerfile
search/api/: api.cpp
search/db/: db.cpp
search/include/db/: searchdb.hpp
search/include/searcher/: searcher.hpp
search/lib/: libJetPlusPlusLib.dylib
search/searcher/: searcher.cpp
